fix: print preview table overflow

--- a/frappe/templates/styles/standard.css
+++ b/frappe/templates/styles/standard.css
@@ -174,6 +174,6 @@ table td div {
 	max-height: 150px;
 }
 
-.print-preview [data-fieldtype="Table"] {
+.print-format-preview [data-fieldtype="Table"] {
 	overflow: auto;
 }
